--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
       "ext-mysqli": "*",
-      "ext-http": "*"
+        "firebase/php-jwt": "^6.11"
     }
 }
