--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,6 @@
         }
     ],
     "require": {
-        "vlucas/phpdotenv": "^5.6",
-      "ext-mysqli": "*",
-        "firebase/php-jwt": "^6.11"
+        "vlucas/phpdotenv": "^5.6"
     }
 }
